Fixed alignment issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -286,6 +286,7 @@ hr {
 
 .links-col {
   margin: auto;
+  text-align: center;
 }
 
 .links {
